--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="주소"><img src="i1.jpg" title="CLICK ME"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/i1.html"><img src="i1.jpg" title="CLICK ME"></a>
 </center>
 </body>
 </html>
