--- a/i1.html
+++ b/i1.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<title> HELLO </title>
+<title> 0101001 </title>
 <meta charset="utf-8">
 </head>
 <body>
 <body bgcolor="black">
 <center>
-<a href="주소"><img src="i1.jpg" title="CLICK ME"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/n2.html"><img src="i2.jpg" title="CLICK ME"></a>
 </center>
 </body>
 </html>
