--- a/n2.html
+++ b/n2.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="https://ssuniv13.github.io/ssuniv.html/t3.html"><img src="i2.jpg" title="CLICK ME"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/t3.html"><img src="i2.jpg" title="CONTINUE"></a>
 </center>
 </body>
 </html>
