--- a/t3.html
+++ b/t3.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="https://ssuniv13.github.io/ssuniv.html/n2.html"><img src="i3.jpg" title="CONTINUE"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/n2.html"><img src="i3.jpg" title="LAST"></a>
 </center>
 </body>
 </html>
