--- a/i1.html
+++ b/i1.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="https://ssuniv13.github.io/ssuniv.html/n2.html"><img src="i2.jpg" title="CLICK ME AGAIN"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/n2.html"><img src="i2.jpg" title="CLICK ME"></a>
 </center>
 </body>
 </html>
