--- a/t3.html
+++ b/t3.html
@@ -7,7 +7,8 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="https://ssuniv13.github.io/ssuniv.html/ro4.html"><img src="i4.jpg" title="LAST"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/ro4.html"><img src="i4.jpg" title="Hints are below"></a>
+  <p>https://ssuniv13.github.io/ssuniv.html/t3.html - t3 + start </p>
 </center>
 </body>
 </html>
