--- a/t3.html
+++ b/t3.html
@@ -8,7 +8,7 @@
 <body bgcolor="black">
 <center>
 <a href="https://ssuniv13.github.io/ssuniv.html/ro4.html"><img src="i4.jpg" title="Hints are below"></a>
-  <p>https://ssuniv13.github.io/ssuniv.html/t3.html - t3 + start </p>
+  <p><p style="color:white; font-size:200%; font-family:'a청춘시대m'">https://ssuniv13.github.io/ssuniv.html/t3.html - t3 + start<br>
 </center>
 </body>
 </html>
