--- a/t3.html
+++ b/t3.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="https://ssuniv13.github.io/ssuniv.html/ro4.html"><img src="i4.jpg" title="Hints are below"></a>
+<img src="i4.jpg" title="Hints are below"></a>
 <p><p style="color:white; font-size:200%; font-family:'a청춘시대m'">https://ssuniv13.github.io/ssuniv.html/t3.html <br>
     <p><p style="color:yellow; font-size:200%; font-family:'a청춘시대m'"> - <br>
     <p><p style="color:white; font-size:200%; font-family:'a청춘시대m'"> t3 <br>
