--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="black">
 <center>
-<a href="https://ssuniv13.github.io/ssuniv.html/digh.html"><img src="o1.jpg"></a>
+<a href="https://ssuniv13.github.io/ssuniv.html/digh.html"><img src="q1.jpg"></a>
 </center>
 </body>
 </html>
