--- a/ehdqorRhc.html
+++ b/ehdqorRhc.html
@@ -8,7 +8,7 @@
 <body bgcolor="black">
 <center>
 <img src="q4.jpg">
-<p><p style="color:purple; font-size:200%; font-family:'a청춘시대m'">tip : IN UPPERCASE<br>
+<p><p style="color:yellow; font-size:200%; font-family:'a청춘시대m'">tip : IN UPPERCASE<br>
 </center>
 </body>
 </html>
