--- a/dnftksqkdnl.html
+++ b/dnftksqkdnl.html
@@ -7,7 +7,7 @@
 <body>
 <body bgcolor="white">
 <center>
-<img src="o1.jpg">
+  <a href="https://ssuniv13.github.io/ssuniv.html/FINISH.html"><img src="o1.jpg" title="Congratulations!"></a>
 </center>
 </body>
 </html>
