--- a/FINISHss.html
+++ b/FINISHss.html
@@ -7,9 +7,9 @@
 <body>
 <body bgcolor="white">
 <center>
-<img src="i2.jpg" title="CAPTURE ME"></a>
-  <p><p style="color:purple; font-size:200%; font-family:'a청춘시대m'"> 모든 미션 종료. <br>
-  <p><p style="color:red; font-size:200%; font-family:'a청춘시대m'"> 본 화면을 캡쳐해 제출하세요! <br>
+<img src="o2.jpg" title="CAPTURE ME"></a>
+  <p><p style="color:purple; font-size:200%; font-family:'a옛날사진관3'"> 모든 미션 종료. <br>
+  <p><p style="color:red; font-size:200%; font-family:'a옛날사진관4'"> 본 화면을 캡쳐해 제출하세요! <br>
 </center>
 </body>
 </html>
