--- a/FINISHss.html
+++ b/FINISHss.html
@@ -8,8 +8,8 @@
 <body bgcolor="white">
 <center>
 <img src="o2.jpg" title="CAPTURE ME"></a>
-  <p><p style="color:purple; font-size:200%; font-family:'a옛날사진관3'"> 모든 미션 종료. <br>
-  <p><p style="color:red; font-size:200%; font-family:'a옛날사진관4'"> 본 화면을 캡쳐해 제출하세요! <br>
+  <p><p style="color:purple; font-size:150%; font-family:'a옛날사진관3'"> 모든 미션 종료. <br>
+  <p><p style="color:red; font-size:150%; font-family:'a옛날사진관4'"> 본 화면을 캡쳐해 제출하세요! (날짜와 시간을 포함한 사진만 인정) <br>
 </center>
 </body>
 </html>
