--- a/start.html
+++ b/start.html
@@ -8,7 +8,7 @@
 <body bgcolor="black">
 <center>
 <img src="q1.jpg">
-  <p> "무OO 나는 _ _ _이 좋아" </p>
+<p><p style="color:white; font-size:150%; font-family:'a옛날사진관4'"> "무OO 나는 _ _ _이 좋아" <br>
 </center>
 </body>
 </html>
