--- a/start.html
+++ b/start.html
@@ -9,8 +9,8 @@
 <center>
 <img src="q1.jpg">
   <p><br>
-<p><p style="color:yellow; font-size:150%; font-family:'a옛날사진관4'"> HINT! <br>
-<p><p style="color:white; font-size:150%; font-family:'a옛날사진관4'"> "OO 나는 대관령이 좋아" <br>
+<p><p style="color:yellow; font-size:200%; font-family:'a옛날사진관4'"> HINT! <br>
+<p><p style="color:white; font-size:200%; font-family:'a옛날사진관4'"> "OO! 나는 대관령이 좋아" <br>
 </center>
 </body>
 </html>
