--- a/DMZ.html
+++ b/DMZ.html
@@ -10,7 +10,7 @@
 <img src="q5.jpg">
     <p><br>
 <p><p style="color:yellow; font-size:200%; font-family:'a옛날사진관4'"> HINT! <br>
-<p> 🐸 + 👶🏻 = 🍜 <br>
+<p><p style="color:white; font-size:200%; font-family:'a옛날사진관4'"> 🐸 + 👶🏻 = 🍜 <br>
 </center>
 </body>
 </html>
