--- a/dkflfkd.html
+++ b/dkflfkd.html
@@ -10,7 +10,7 @@
 <img src="q8.jpg">
   <p><br>
 <p><p style="color:yellow; font-size:200%; font-family:'a옛날사진관4'"> HINT! <br>
-<p><p style="color:white; font-size:200%; font-family:'a옛날사진관4'"> Look at the center carefully.<br> 
+<p><p style="color:white; font-size:200%; font-family:'a옛날사진관4'"> Look at the center carefully.<br> <br> <br> <br>
 <p><p style="color:white; font-size:200%; font-family:'a옛날사진관4'">  🎉 🎣 🎊 <br>
 </center>
 </body>
