--- a/dhfflavlr.html
+++ b/dhfflavlr.html
@@ -11,7 +11,7 @@
    <p><br>
 <p><p style="color:yellow; font-size:200%; font-family:'a옛날사진관4'"> HINT! <br>
   <p><p style="color:white; font-size:200%; font-family:'a옛날사진관4'"> Find a rock that didn't attend the meeting. <br> <br><br><br><br><br><br>
-  <p><p style="color:white; font-size:150%; font-family:'a옛날사진관4'"> Search keyword tip -> "OO바위 전설" <br>
+  <p><p style="color:red; font-size:150%; font-family:'a옛날사진관4'"> Search keyword tip -> "OO바위 전설" <br>
 </center>
 </body>
 </html>
