--- a/dnftksqkdnl.html
+++ b/dnftksqkdnl.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title> CLEAR ut it's not over yet </title>
+<title> But it's not over yet </title>
 <meta charset="utf-8">
 </head>
 <body>
